<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item1"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/item1"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item2"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/item2"
        android:visible="true"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item3"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/end_search"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

</menu>